--- a/module-2/lab-pca/your-code/main.ipynb
+++ b/module-2/lab-pca/your-code/main.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +74,7 @@
        "(4096, 80)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +96,7 @@
        "(4096, 80)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -138,7 +138,7 @@
        "       [61, 61, 61, ..., 64, 64, 61]])"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -160,16 +160,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x11928db70>"
+       "<matplotlib.image.AxesImage at 0x105972128>"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -194,16 +194,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x1192fde48>"
+       "<matplotlib.image.AxesImage at 0x11625d518>"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -238,24 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "'''import numpy as np\n",
-    "\n",
-    "x = np.array([[1000,  10,   0.5],\n",
-    "              [ 765,   5,  0.35],\n",
-    "              [ 800,   7,  0.09]])\n",
-    "\n",
-    "x_normed = x / x.max(axis=0)\n",
-    "\n",
-    "'''"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -270,6 +253,27 @@
     "    x_normed= (x-mean)/stdv\n",
     "    \n",
     "    return x_normed\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "testing if standardize worked out [[-1. -1. -1.]\n",
+      " [ 1.  1.  1.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "y=np.array([[1,2,3],[4,5,6]])\n",
+    "#Sample output: np.array([[-1,-1,-1],[1,1,1]])\n",
+    "    \n",
+    "print('testing if standardize worked out', standardize(y))"
    ]
   },
   {
@@ -306,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -327,7 +331,7 @@
        "        -0.09889407,  1.02739353]])"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -345,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -372,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -393,7 +397,7 @@
        "         0.62104786,  0.09488681]])"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -418,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -441,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -450,7 +454,7 @@
        "(4096, 2)"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -469,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -495,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -504,7 +508,7 @@
        "(160, 2)"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -532,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -638,7 +642,7 @@
        "[160 rows x 2 columns]"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -659,12 +663,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Your code here:\n",
-    "colors=['blue']*80+['red']*80\n"
+    "\n",
+    "colors = []\n",
+    "for i in range(160):\n",
+    "    if i < 80:\n",
+    "        colors.append('blue')\n",
+    "    else:\n",
+    "        colors.append('red')\n",
+    "\n"
    ]
   },
   {
@@ -676,7 +687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -686,16 +697,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x11989eb00>"
+       "<matplotlib.collections.PathCollection at 0x118f42630>"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     },
